--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_USERNAME=postgres
-DB_PASSWORD=root
-DB_NAME=semillero_db
-DB_HOST=localhost
+DB_USERNAME=student
+DB_PASSWORD=Student22
+DB_NAME=testpweb
+DB_HOST=database-1.ct3gev1bipds.us-east-2.rds.amazonaws.com
